--- a/Mediapipe.Net/Mediapipe.Net.csproj
+++ b/Mediapipe.Net/Mediapipe.Net.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.7\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props" Condition="Exists('..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.7\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props')" />
+  <Import Project="..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props" Condition="Exists('..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props')" />
   <PropertyGroup>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
@@ -12,7 +12,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -510,6 +510,6 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.7\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.7\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props'))" />
+    <Error Condition="!Exists('..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props'))" />
   </Target>
 </Project>
