--- a/Mediapipe.Net.HelloWorld/Mediapipe.Net.HelloWorld.csproj
+++ b/Mediapipe.Net.HelloWorld/Mediapipe.Net.HelloWorld.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props" Condition="Exists('..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -71,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mediapipe.Net\Mediapipe.Net.csproj">
@@ -79,4 +83,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Mediapipe.Net.Runtime.CPU.kaymyst.1.0.8\build\net48\Mediapipe.Net.Runtime.CPU.kaymyst.props'))" />
+  </Target>
 </Project>
